@@ -1,6 +1,6 @@
 /*
  *
- *  Copyright 2015 the original author or authors.
+ *  Copyright 2015-2019 the original author or authors.
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -19,16 +19,15 @@
 
 package springfox.petstore.repository;
 
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.Iterables;
-
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Predicate;
+
+import static java.util.stream.Collectors.*;
 
 public class MapBackedRepository<K, V extends Identifiable<K>> {
-  Map<K, V> service = new HashMap<K, V>();
+  Map<K, V> service = new HashMap<>();
 
   public void delete(K key) {
     service.remove(key);
@@ -47,12 +46,12 @@ public class MapBackedRepository<K, V extends Identifiable<K>> {
   }
 
   public V first() {
-    return Iterables.getFirst(service.values(), null);
+    return service.values().stream().findFirst().orElse(null);
   }
   
   public List<V> where(Predicate<V> criteria) {
-    return FluentIterable
-            .from(service.values())
-            .filter(criteria).toList();
+    return
+            service.values().stream()
+            .filter(criteria).collect(toList());
   }
 }
